# AIMS

./: CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  MISSION.md  PHILOSOPHY.md  PROJECT_CHARTER.md  PUSH_INSTRUCTIONS.md  PUSH_INSTRUCTIONS_FOUNDATION.md  README.md  README_Foundation_v0.1.md  RELEASE_NOTES_FOUNDATION_v0.1.0.md  RELEASE_NOTES_GENESIS_v0.0.0.md  ROADMAP.md  VISION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  foundation-ci.yml
AIMS_v0.2.0/: CHANGELOG.md  requirements.txt
AIMS_v0.2.0/aims/: cli.py
AIMS_v0.3.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.3.0/aims/: cli.py
AIMS_v0.4.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.4.0/aims/: cli.py
AIMS_v0.4.0/docs/: v0.3.0-bim-readiness.md
AIMS_v0.5.0/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.5.0/aims/: cli.py
AIMS_v0.5.0/standards/bim/: ifc_mapping.yaml
AIMS_v0.5.0/tests/: test_qa_score.py
AIMS_v0.6.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.6.0/aims/: cli.py
AIMS_v0.6.0/docs/: v0.6.0-plugin-system.md
AIMS_v0.7.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.7.0/aims/: cli.py
AIMS_v0.8.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v0.8.0/aims/: cli.py
AIMS_v0.8.0/docs/: v0.8.0-openbim-foundation.md
AIMS_v0.8.0/tests/: test_bim_readiness.py  test_gis_readiness.py  test_report_openbim.py
AIMS_v0.9.0/: CHANGELOG.md  README.md  pyproject.toml
AIMS_v1.0.0/: CHANGELOG.md  pyproject.toml
adr/: ADR-0001-DDD.md  ADR-0002-ADF.md  ADR_TEMPLATE.md
aims/: __init__.py  cli.py
benchmarks/: BENCHMARK_PLAN.md  README.md  run_benchmark.py
docs/: ACE_SPECIFICATION.md  ACS_SPECIFICATION.md  ADF_SPECIFICATION.md  ARCHITECTURE.md  C4_CONTAINER.md  C4_CONTEXT.md  DDD.md  DOMAIN_MODEL.md  FOUNDATION_30_DAY_PLAN.md  ONTOLOGY.md  PLUGIN_SDK.md  RULE_LANGUAGE.md  USER_GUIDE.md  v0.2.0-architecture.md  v0.7.0-reporting-dashboard.md  v1.0.0-release.md
examples/: README.md  simple_site.dxf
plugins/: __init__.py
reports/: aims_output.geojson  aims_output.ifc
rfcs/: RFC-0001-ADF.md  RFC-0002-ACS.md  RFC-0003-ACE.md  RFC_TEMPLATE.md
scripts/: README.md
testdata/: README.md
tests/: test_automation.py  test_bim_mapping.py  test_classification.py  test_dxf_parser_fallback_v10.py  test_gis_geojson.py  test_gis_topology.py  test_openbim_validation.py  test_parser.py  test_report_bim.py  test_report_gis.py  test_report_outputs_v07.py  test_reports.py  test_validation.py  test_validation_v02.py
tools/: README.md
(+48 files in other folders)
