[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aims-platform"
version = "0.1.0"
description = "AIMS v0.1 Foundation: DXF to ADF to SQLite to validation report."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AIMS Project" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
aims-pipeline = "aims.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aims*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
